ndb - bug#35607   use CLOCK_MONOTONIC if present/possible   both for NdbTick_Current* and NdbCondition_WaitTimeout